--- a/src/image-view.html
+++ b/src/image-view.html
@@ -284,11 +284,7 @@
                   </svg>
                   <span class="visually-hidden">Show details</span>
                 </button>
-                <button
-                  title="Share image"
-                  type="button"
-                  class="js-image-share btn-subtle btn"
-                >
+                <button title="Share image" type="button" class="js-image-share btn-subtle btn">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="24"
@@ -325,11 +321,7 @@
                   </svg>
                   <span class="visually-hidden">Download</span>
                 </button>
-                <button
-                  title="Delete image"
-                  type="button"
-                  class="js-image-delete btn-subtle btn"
-                >
+                <button title="Delete image" type="button" class="js-image-delete btn-subtle btn">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="24"
