--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <meta name="theme-color" content="#fafafa" />
   </head>
 
-  <body>
+  <body class="is-uploading">
     <div class="wrapper">
       <header class="js-search-header header">
         <div class="header__slot_logo header__slot">
@@ -144,8 +144,8 @@
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="20"
-                height="20"
+                width="22"
+                height="22"
                 fill="currentColor"
                 class="bi bi-search"
                 viewBox="0 0 16 16"
@@ -154,7 +154,7 @@
                   d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
                 ></path>
               </svg>
-              <span class="visually-hidden">Button</span>
+              <span class="visually-hidden">Search</span>
             </button>
           </form>
         </div>
@@ -231,7 +231,8 @@
         </aside>
         <div class="sidebar-backdrop"></div>
         <main class="main">
-          <div id="pig" class="gallery"></div>
+          <div id="pig" class="gallery mb-4"></div>
+          <button type="button" class="btn btn-lg btn-primary">Load more</button>
         </main>
       </div>
     </div>
@@ -273,7 +274,21 @@
       </div>
     </div>
 
-    <div class="js-upload__manager upload__manager"></div>
+
+    <a href="#" class="js-upload-bar upload-bar">
+      Uploading 9243 photos (1h 53m remaining)
+      <div class="upload-bar__progress progress">
+        <div
+          class="progress-bar"
+          role="progressbar"
+          style="width: 25%"
+          aria-valuenow="25"
+          aria-valuemin="0"
+          aria-valuemax="100"
+        >
+        </div>
+      </div>
+    </a>
 
     <script src="js/vendor/pig.min.js"></script>
     <script src="js/bundle.js"></script>
