Fix Android chrome sidebar, keep header above everything, try dynamic datalist

--- a/src/image-view.html
+++ b/src/image-view.html
@@ -573,22 +573,7 @@ My title title title title title title title title title title title title title
     </div>
 
     <datalist id="tag-list">
-      <option value="San Francisco"></option>
-      <option value="New York"></option>
-      <option value="Seattle"></option>
-      <option value="Los Angeles"></option>
-      <option value="Chicago"></option>
-      <option value="Dallas"></option>
-      <option value="San Diego"></option>
-      <option value="San Antonio"></option>
-      <option value="Memphis"></option>
-      <option value="Aurora"></option>
-      <option value="Anaheim"></option>
-      <option value="Cleveland"></option>
-      <option value="Bakersfield"></option>
-      <option value="Wichita"></option>
-      <option value="Toledo"></option>
-      <option value="Reno"></option>
+      <option value="Default tag"></option>
     </datalist>
 
     <a href="#" class="js-upload-bar upload-bar">
