--- a/src/index.html
+++ b/src/index.html
@@ -59,9 +59,10 @@
               </button>
               <input
                 class="js-search__input search__input form-control form-control-lg"
-                type="text"
+                type="search"
                 placeholder="Search..."
                 autocomplete="off"
+                inputmode="search"
               />
               <label
                 tabindex="-1"
