--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,17 @@
         </div>
         <div class="header__slot_search header__slot">
           <form action="#" class="js-search search">
+            <div class="search__image-progress progress">
+              <div
+                class="js-search__image-progress-bar progress-bar"
+                role="progressbar"
+                style="width: 0"
+                aria-valuenow="0"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              >
+              </div>
+            </div>
             <div class="js-search__field search__field">
               <button
                 title="Hide search"
@@ -59,7 +70,7 @@
               </button>
               <input
                 class="js-search__input search__input form-control form-control-lg"
-                type="search"
+                type="text"
                 placeholder="Search..."
                 autocomplete="off"
                 inputmode="search"
@@ -143,6 +154,9 @@
               type="button"
               class="js-search__toggle search__field-show btn btn-subtle btn-lg"
             >
+              <span class="search__field-image-search-spinner spinner-border spinner-border-sm text-secondary" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="22"
